Enable relative URLs

--- a/source/stylesheets/application.css
+++ b/source/stylesheets/application.css
@@ -1,6 +1,6 @@
 /*
  * Libs
- *= require fontawesome/font-awesome.min
+ *= require fontawesome/font-awesome
  *= require iconfontcustom/icon-font-custom
  *
  * Template CSS
