--- a/source/stylesheets/iconfontcustom/icon-font-custom.scss
+++ b/source/stylesheets/iconfontcustom/icon-font-custom.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'iconfontcustom';
-	src:url('/fonts/iconfontcustom.eot?jzaet');
-	src:url('/fonts/iconfontcustom.eot?#iefixjzaet') format('embedded-opentype'),
-		url('/fonts/iconfontcustom.woff?jzaet') format('woff'),
-		url('/fonts/iconfontcustom.ttf?jzaet') format('truetype'),
-		url('/fonts/iconfontcustom.svg?jzaet#iconfontcustom') format('svg');
+	src: font-url('iconfontcustom.eot?jzaet');
+	src: font-url('iconfontcustom.eot?#iefixjzaet') format('embedded-opentype'),
+		font-url('iconfontcustom.woff?jzaet') format('woff'),
+		font-url('iconfontcustom.ttf?jzaet') format('truetype'),
+		font-url('iconfontcustom.svg?jzaet#iconfontcustom') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
