Fix some image paths

--- a/source/_main_slider.haml
+++ b/source/_main_slider.haml
@@ -28,11 +28,11 @@
         = image_tag 'slider/1920x680-1.jpg'
 
         .caption.fade{ 'data-easing' => 'easeOutBack', 'data-speed' => '700', 'data-start' => '700', 'data-x' => '440', 'data-y' => '165' }
-          = image_tag '/slider/slide1-p1.png'
+          = image_tag 'slider/slide1-p1.png'
         .caption.fade{ 'data-easing' => 'easeOutBack', 'data-speed' => '700', 'data-start' => '1300', 'data-x' => '810', 'data-y' => '340' }
-          = image_tag '/slider/slide1-p2.png'
+          = image_tag 'slider/slide1-p2.png'
         .caption.fade{ 'data-easing' => 'easeOutBack', 'data-speed' => '700', 'data-start' => '1900', 'data-x' => '1010', 'data-y' => '430' }
-          = image_tag '/slider/slide1-p3.png'
+          = image_tag 'slider/slide1-p3.png'
         .caption.title.sfl{ 'data-easing' => 'easeOutBack', 'data-speed' => '700', 'data-start' => '2500', 'data-x' => '30', 'data-y' => '230' }
           Retina ready & Responsive
         .caption.subtitle.sft{ 'data-easing' => 'easeOutBack', 'data-speed' => '700', 'data-start' => '3000', 'data-x' => '30', 'data-y' => '180' }
@@ -46,7 +46,7 @@
         .caption.sfb{ 'data-easing' => 'easeOutBack', 'data-speed' => '700', 'data-start' => '4000', 'data-x' => '30', 'data-y' => '440' }
           %a.btn{ href: '#' } see more
         .caption.sft{ 'data-easing' => 'easeOutBack', 'data-speed' => '700', 'data-start' => '4500', 'data-x' => '850', 'data-y' => '50' }
-          = image_tag '/slider/slide1-p4.png'
+          = image_tag 'slider/slide1-p4.png'
 
       %li{ 'data-transition' => 'fade' }
         = image_tag 'slider/1920x680-3.jpg'
