Add projects to the front page
Also, add more projects

--- a/source/_projects.haml
+++ b/source/_projects.haml
@@ -5,73 +5,30 @@
         %h1.text-center Our Projects
 
   .row
-    .span4
-      .portfolio-item
-        .portfolio-item-preview
-          = image_tag 'portfolio/370x320-4.png'
-          .portfolio-item-overlay
-            .portfolio-item-overlay-actions
-              %a.portfolio-item-link{ href: 'portfolio-item.html' }
-                %i.ifc-link
-              %a.magnificPopup-gallery.portfolio-item-zoom{ href: '/images/portfolio/370x320-4.png' }
-                %i.ifc-zoom_in
-        .portfolio-item-description
-          %h3
-            %a{ href: 'portfolio-item.html' } Socialheat
-          %h3
-            Url:
-            %span
-              %a{ href: '#' } www.socialheat.lt
-          %p Mobile app that finds all events in your area and presents them in order of popularity or time acounting the time it would take to travel to the location.
-          %p.text-right
-            %a{ href: 'portfolio-item.html' }
-              %i.ifc-fast_forward
-              Read more
+    - data.projects.first(3).each do |project|
+      .span4
+        .portfolio-item
+          .portfolio-item-preview
+            = image_tag project.images.medium
+            .portfolio-item-overlay
+              .portfolio-item-overlay-actions
+                %a.portfolio-item-link{ href: url_for("/project/#{project.url_name}.html") }
+                  %i.ifc-link
+                %a.magnificPopup-gallery.portfolio-item-zoom{ href: image_path(project.images.medium) }
+                  %i.ifc-zoom_in
 
-    .span4
-      .portfolio-item
-        .portfolio-item-preview
-          = image_tag 'portfolio/370x320-5.png'
-          .portfolio-item-overlay
-            .portfolio-item-overlay-actions
-              %a.portfolio-item-link{ href: 'portfolio-item.html' }
-                %i.ifc-link
-              %a.magnificPopup-gallery.portfolio-item-zoom{ href: '/images/portfolio/370x320-5.png' }
-                %i.ifc-zoom_in
-        .portfolio-item-description
-          %h3
-            %a{ href: 'portfolio-item.html' } Contact swich
-          %h3
-            Url:
-            %span
-              %a{ href: '#' } www.google.com
-          %em Easiest way to exchange contacts.
-          %p Each user recievses a unique URL. If somene conceted to google acount opnes it his/hers contacts will be added to URL oweners smartphone contact list also other way aournd the person who opened will recieve the other persons contacts.
-          %p.text-right
-            %a{ href: 'portfolio-item.html' }
-              %i.ifc-fast_forward
-              Read more
-
-    .span4
-      .portfolio-item
-        .portfolio-item-preview
-          = image_tag 'portfolio/370x320-6.png'
-          .portfolio-item-overlay
-            .portfolio-item-overlay-actions
-              %a.portfolio-item-link{ href: 'portfolio-item.html' }
-                %i.ifc-link
-              %a.magnificPopup-gallery.portfolio-item-zoom{ href: '/images/portfolio/370x320-6.png' }
-                %i.ifc-zoom_in
-        .portfolio-item-description
-          %h3
-            %a{ href: 'portfolio-item.html' } ePagalba
-          %h3
-            Url:
-            %span
-              %a{ href: '#' } www.google.com
-          %em An app that calls emergency services
-          %p After a cruel tragedy a major error was displayed in emergency response services. Operators often could not know where the person was or tell only in only few kilmeter readius. We crated an app that would pass geolocation taking it from smartphones with any aditional information.
-          %p.text-right
-            %a{ href: 'portfolio-item.html' }
-              %i.ifc-fast_forward
-              Read more
+          .portfolio-item-description
+            %h3
+              = link_to project.name, "/project/#{project.url_name}.html"
+            - if project.url
+              %h3
+                Url:
+                %span
+                  %a{ href: "http://#{project.url}" }= project.url
+            - if project.tagline
+              %em= project.tagline
+            %p= project.description
+            %p.text-right
+              %a{ href: url_for("/project/#{project.url_name}.html") }
+                %i.ifc-fast_forward
+                Read more
