--- a/source/layouts/_header.haml
+++ b/source/layouts/_header.haml
@@ -1,14 +1,14 @@
 #header
   .row
     .span3
-      %a#logo{:href => url_for('index.html') }
+      %a#logo{:href => url_for('/index.html') }
         = image_tag 'logo.png', class: 'responsive-img'
     .span9
       %a#mobile-menu-trigger{ href: '#' }
         %i.fa.fa-bars
       %ul#menu.sf-menu.fixed
         %li.current
-          %a{ href: url_for('index.html') }
+          %a{ href: url_for('/index.html') }
             %span Home
         %li.dropdown
           %a{ href: 'portfolio-3.html' }
@@ -16,7 +16,7 @@
           %ul
             - data.projects.each do |project|
               %li
-                = link_to project.name, "project/#{project.url_name}.html"
+                = link_to project.name, "/project/#{project.url_name}.html"
         %li
           %a{ href: 'services.html' }
             %span Services
