--- a/source/project.haml
+++ b/source/project.haml
@@ -13,15 +13,20 @@
               %h2= project.name
 
             .portfolio-item-description
-              %h3 This is Autumn
+              - if project.tagline
+                %h3= project.tagline
+
               - if project.client
                 %h3
                   Client:
                   %span= project.client
-              %h3
-                Url:
-                %span
-                  %a{href: "http://#{project.url}"}= project.url
+
+              - if project.url
+                %h3
+                  Url:
+                  %span
+                    %a{href: "http://#{project.url}"}= project.url
+              
               %p= project.description
 
           .span6
