--- a/source/layouts/_header.haml
+++ b/source/layouts/_header.haml
@@ -7,19 +7,22 @@
       %a#mobile-menu-trigger{ href: '#' }
         %i.fa.fa-bars
       %ul#menu.sf-menu.fixed
-        %li.current
+        %li{ class: current_for('/index.html') }
           %a{ href: url_for('/index.html') }
             %span Home
+
         %li.dropdown
-          %a{ href: 'portfolio-3.html' }
+          %a{ href: '#' }
             %span Portfolio
           %ul
             - data.projects.each do |project|
-              %li
+              %li{ class: current_for("/project/#{project.url_name}.html") }
                 = link_to project.name, "/project/#{project.url_name}.html"
-        %li
-          %a{ href: 'services.html' }
+
+        %li{ class: current_for('/services.html') }
+          %a{ href: url_for('/services.html') }
             %span Services
-        %li
-          %a{ href: 'contact.html' }
+
+        %li{ class: current_for('/contact.html') }
+          %a{ href: url_for('/contact.html') }
             %span Contact
