--- a/source/project.haml
+++ b/source/project.haml
@@ -62,3 +62,6 @@
           %blockquote
             %h5= testimonial.who
             %p= testimonial.text
+
+- content_for :footer do
+  = partial 'contacts'
